# fnands.com

./: README.md  _quarto.yml  about.qmd  custom-light.scss  index.qmd
.github/workflows/: publish.yml
blog/: _metadata.yml
blog/2023/mojo-advent-of-code/: 2023-09-11-mojo-advent-of-code.ipynb  2023-09-11-mojo-advent-of-code.md  index.ipynb
blog/2023/mojo-parameters/: 2023-10-25-mojo-parameters.ipynb  2023-10-25-mojo-parameters.md  index.ipynb
blog/2023/mojo-simd/: 2023-11-17-mojo-simd.ipynb  2023-11-17-mojo-simd.md  index.ipynb
blog/2023/mojo-traits/: 2023-12-10-mojo-traits.ipynb  2023-12-10-mojo-traits.md  index.ipynb
blog/2023/stereo-vision-julia/: 2023-09-18-Stereo-vision-disparity.ipynb  index.ipynb
blog/2024/factory-hackathon/: conversation_history.txt  index.md
blog/2024/mojo-crc-calc/: crc.mojo  crc32_alias.mojo  crc_readme_Kareem_Omar.md  crcn.mojo  index.ipynb  minimal_bug.mojo  super_minimal_bug.mojo
blog/2024/mojo-png-parsing/: 2024-05-04-mojo-png-parsing.ipynb  index.ipynb
blog/2024/mojo-stdlib-open-source/: 2024-04-14-mojo-stdlib-open-source.md  index.ipynb
blog/2024/open-stereo-notes/: index.md
blog/2024/pansharpening-intro-python/: 2024-01-02-pansharpening-intro-python.ipynb  index.ipynb
blog/2025/30_day_map_process/: index.md  index_3d.md
blog/2026/dinov3_cosine_stereo/: block-matching-instructions.md  block_matching.py  claude-code-instructions.md  encoders.py  index.ipynb  matching.py  mid14-instructions.md  middlebury_eval.py  pyproject.toml  run_comparison.py
notes/: index.qmd
talks/: index.qmd
(+18 files in other folders)
